# bankinfo

./: README.md  pyproject.toml
bankinfo/: validator.py
tests/: test_validator.py
